# ChangeLog for dev-python/egenix-mx-base
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/egenix-mx-base/ChangeLog,v 1.35 2009/01/25 16:22:20 patrick Exp $

*egenix-mx-base-3.1.1 (25 Jan 2009)

  25 Jan 2009; Patrick Lauer <patrick@gentoo.org>
  +egenix-mx-base-3.1.1.ebuild:
  Bump to 3.1.1, small fixes from Chris Mayo, closes #256321

  17 Aug 2007; Roy Marples <uberlord@gentoo.org>
  egenix-mx-base-3.0.0.ebuild:
  Keyworded ~sparc-fbsd

*egenix-mx-base-3.0.0 (10 Jul 2007)

  10 Jul 2007; Tiziano Müller <dev-zero@gentoo.org>
  +egenix-mx-base-3.0.0.ebuild:
  Version bump.

  21 Feb 2007; Lukasz Strzygowski <lucass@gentoo.org>
  files/digest-egenix-mx-base-2.0.5, files/digest-egenix-mx-base-2.0.6,
  Manifest:
  Convert to Manifest2.

  17 Apr 2006; Diego Pettenò <flameeyes@gentoo.org>
  egenix-mx-base-2.0.6.ebuild:
  Add ~x86-fbsd keyword.

  17 Aug 2005; MATSUU Takuto <matsuu@gentoo.org>
  egenix-mx-base-2.0.5.ebuild:
  Stable on sh.

  13 Jan 2005; Alastair Tse <liquidx@gentoo.org>
  egenix-mx-base-2.0.6.ebuild:
  removing pytag.py as it breaks with -fstack-protector (#63762)

  30 Dec 2004; Ciaran McCreesh <ciaranm@gentoo.org> :
  Change encoding to UTF-8 for GLEP 31 compliance

  29 Dec 2004; Bryan Østergaard <kloeri@gentoo.org>
  -egenix-mx-base-2.0.3.ebuild, -egenix-mx-base-2.0.4.ebuild:
  Remove old ebuilds.

*egenix-mx-base-2.0.6 (29 Dec 2004)

  29 Dec 2004; Bryan Østergaard <kloeri@gentoo.org>
  +egenix-mx-base-2.0.6.ebuild:
  Version bump.

  19 Oct 2004; Dylan Carlson <absinthe@gentoo.org>
  egenix-mx-base-2.0.5.ebuild:
  Stable on amd64.

  01 Jun 2004; Tom Gall <tgall@gentoo.org> egenix-mx-base-2.0.5.ebuild:
  stable on ppc64, bug #52709

  07 May 2004; Bryan Østergaard <kloeri@gentoo.org>
  egenix-mx-base-2.0.3.ebuild:
  Add missing IUSE.

  01 Apr 2004; Brian Jackson <iggy@gentoo.org> egenix-mx-base-2.0.5.ebuild:
  add s390 to keywords
