@@ -1,8 +1,10 @@
 DIST egenix-mx-base-2.0.6.tar.gz 586854 RMD160 dc25b5941cb790d1aa424a7eb1849ddf7231fa0e SHA1 7f964408e3bd907c1a39b0f8d8d00d2367d97841 SHA256 03b1ab04397745d22d6e76bd71a6e7fbaf6988e0d75bf2d6face1c910309ac36
 DIST egenix-mx-base-3.0.0.tar.gz 4018522 RMD160 22371710ef43b441e0d2b7051c7fb819665b5bf0 SHA1 b50a6625606a24bb291c3737b18b7117943f6a62 SHA256 9ec176847b1e01cd2083cd578e804fda2c619d0f465cd752ec11b38099f75f7f
 DIST egenix-mx-base-3.1.1.tar.gz 8160134 RMD160 fc2dd06c2a93f010e7ac63777310f942a0868185 SHA1 70b4423a1f4d690976d57ded91ec3e9a71c6c0a3 SHA256 a0d03208e335610defc3049d8dd03f4ec7fcf477f44c4897b3f68adc478237ee
+DIST egenix-mx-base-3.1.2.tar.gz 8166581 RMD160 cd6a5623b495839e2ee9c014f01c9e66b9f4fcb9 SHA1 cc029434b9d52c6516eb41f01204bcc137e2cfb6 SHA256 5da8909c065cb6494aab16da82a9f20299fa391d115c7edb08dd14f3102f70f4
 EBUILD egenix-mx-base-2.0.6.ebuild 811 RMD160 160e99bec021f844939cd68dd59a1cd6407af411 SHA1 12a8ddcd609f358b97c3af8a5acc081802bd52b4 SHA256 0f1663ccbf2bc1b328f2268a638581c1b8bb5eb35740179d3b98ec1775bfacc3
 EBUILD egenix-mx-base-3.0.0.ebuild 1136 RMD160 50ad014aaa72513ade86f910312bad26cb1f3a5e SHA1 f584291d110d751253c89f51479b0987acb1dc0d SHA256 17e08ad4a5be63aeeaab1cedad01ca9d988bff194a706573aee0ae37656d3ac1
 EBUILD egenix-mx-base-3.1.1.ebuild 1166 RMD160 946838cd0341e9390970e7c7985bda1b2a37b7c1 SHA1 a9434352c895d874587697ad563ea9f3e17a5814 SHA256 f65dd0a7f19198ef7de60ffadfe403e219f6fa3daeb4b6e56c8c64b8c54390db
-MISC ChangeLog 4347 RMD160 fb78a5418d91144298a36219c320872e7ca3adc3 SHA1 9ca7a91b2120bd6cbaaa67a0469ff54285409715 SHA256 5169ef931396278006dfb9ae2a12db07b5f5fa457c25449186a52b9ea4ef73e3
+EBUILD egenix-mx-base-3.1.2.ebuild 1178 RMD160 6993f70643b2acd90f02dedd31771692a1d176e0 SHA1 2bb43e673e2509e7c32844f1f2fd75954bc7eff9 SHA256 b4fe9bcff673b6413ee787f38ff1198a2b18874f64c3719bf3e117a45b7adbdd
+MISC ChangeLog 4507 RMD160 303837accadf5682c69b8397b63ba15000b392fa SHA1 9b994c60bfbfcb3cd969f2c8af28c6c25249051e SHA256 693ed004f14a9051500099caef37baf96f1f3239217f4f5cb5c3257d83a0c9fe
 MISC metadata.xml 159 RMD160 900a8c55d7a7d2f6312594769aaf941bf9e99c7f SHA1 c8e604d56dae898258b5254d78cfeac0b981e288 SHA256 9f01104d3484792496faff4805eed0ecea2352a897151f3397d49a13800037b4
