@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/egenix-mx-base
-# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/egenix-mx-base/ChangeLog,v 1.35 2009/01/25 16:22:20 patrick Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-python/egenix-mx-base/ChangeLog,v 1.36 2009/07/24 20:28:16 arfrever Exp $
+
+*egenix-mx-base-3.1.2 (24 Jul 2009)
+
+  24 Jul 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  +egenix-mx-base-3.1.2.ebuild:
+  Version bump.
 
 *egenix-mx-base-3.1.1 (25 Jan 2009)
 
